# ASTRO-NEO

./: .dockerignore  .gitignore  BUILD_NOTES.md  DASHBOARD_IMPROVEMENTS.md  Dockerfile  README.md  alembic.ini  astrometry_dl.sh  debug_horizon.py  docker-compose.logging.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_confirmation_workflow.py
alembic/: env.py
alembic/versions/: 0001_create_site_config.py  0002_add_neocandidate.py  0003_add_neocp_artifacts.py  0004_add_observability_table.py  0005_add_ephemeris_table.py  0005a_add_capturelog_table.py  0006_add_astrometric_solution.py  0006_add_weather_snapshot.py  0007_add_equipment_profile.py  0008_merge_astrometry_weather.py  0009_add_astrometry_quality_fields.py  0010_add_measurement_table.py  0011_add_submission_log.py  0012_add_mag_sigma.py  0013_eqp_profiles_horizon.py  0014_ades_compliance.py  0015_add_is_active_to_site.py  0016_add_horizons_ephemeris_fields.py  0017_add_composite_score_fields.py  0018_add_association_quality_metrics.py  3011bfd99ca7_add_session_persistence.py  add_timezone_to_site_config.py
app/: __init__.py  dashboard.py  dashboard_router.py  main.py
app/api/: __init__.py  bridge.py  (+13 more)
config/: site_local.yml
docker/: astrometry.Dockerfile
documentation/: APP_MANAGED_LOOP.md  BUILD_NOTES.md  CODEX_RECOMMENDATIONS.md  EXAMPLE_SEQUENCE.json  LLM_SYSTEM_DESCRIPTION.md  MULTI_TARGET_SEQUENCES.md  QUICK_READ.md  SEQUENTIAL_TARGET_SEQUENCES.md  SIMPLIFY_PLAN.md  STREAMLINE.md  TARGET_SCORING.md  ades_text.txt  advanced-api-openapi-source.json  horizon_service.txt  neocp_pipeline.md  nina_advanced_mcp.py.txt  open-mateo.txt
mock_nina/: Dockerfile  __init__.py  config.py  fits_utils.py  main.py  models.py  state.py
nina_bridge/: __init__.py  config.py  main.py  models.py  sequence_builder.py  state.py  templates.py
ops/: .sops.yaml  astro-neo.service  backup.sh  loki-config.yaml  promtail-config.yaml
scripts/: NINA_mock_api.md  check_neocp_obs_api.py  debug_horizon.py  debug_state.py  direct_nina_test.py  fetch_sequence.py  list_sequences.py  neocp_sample_fetch.py  nina_api_monitor.py  nina_api_smoke.py  nina_bridge_smoke.py  synthetic_neo_inject.py  test_capture.py  test_connect_capture.py  test_echo.py  test_empty.py  test_file_path_extraction.py  test_incremental.py  test_list_devices.py  test_wrapped.py
test_scripts/: ToConfirm.html  neocp_ingest.py  nina_api_smoke.py  nina_bridge_smoke.py  plot_horizon.py  retention_prune.py  verify_association_db.py
(+101 files in other folders)
